--- a/package.json
+++ b/package.json
@@ -4,18 +4,21 @@
   "description": "A customizable, online logbook for adaptive, efficient, fast logging.",
   "main": "server/index.js",
   "dependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
+    "bootstrap": "^3.3.7",
     "express": "^4.16.2",
     "jquery": "^3.2.1",
     "mongoose": "^4.13.1",
-    "nodemon": "^1.12.1",
     "react": "^16.1.0",
     "react-dom": "^16.1.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "nodemon": "^1.12.1"
+  },
   "scripts": {
+    "build": "babel ./client --watch --out-dir ./client/compiled --presets=es2015,react --ignore=node_modules,compiled --source-maps inline",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
