--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "moment": "^2.19.1",
     "moment-timezone": "^0.5.14",
     "mongoose": "^4.13.1"
